--- a/MawBlog/Views/Home/Index.cshtml
+++ b/MawBlog/Views/Home/Index.cshtml
@@ -3,6 +3,9 @@
 
 @{
     ViewData["Title"] = "Home Page";
+    var page = Model.PageNum;
+    var older = page - 1;
+    var newer = page + 1;
 }
 
 <!-- Page Content -->
@@ -24,7 +27,7 @@
                         <br />
                         @foreach (var tag in Model.Tags)
                         {
-                            @if(tag.PostId == post.Id)
+                            @if (tag.PostId == post.Id)
                             {
                                 <a asp-controller="Home" asp-action="Tag" asp-route-id="@tag.Name">#@tag.Name</a>
                             }
@@ -36,14 +39,34 @@
                 </div>
             }
             <!-- Pagination -->
-            @*<ul class="pagination justify-content-center mb-4">
+            <ul class="pagination justify-content-center mb-4">
                 <li class="page-item">
-                    <a class="page-link" href="#">&larr; Older</a>
+                    <form asp-controller="Home" asp-action="Index" method="get">
+                        <input type="hidden" value="@older" name="page" />
+                        @if (older >= 0)
+                        {
+                            <button type="submit" class="page-link btn text-white mr-1">&larr; Older</button>
+                        }
+                        else
+                        {
+                            <button type="submit" class="page-link btn text-white mr-1" disabled>&larr; Older</button>
+                        }
+                    </form>
                 </li>
-                <li class="page-item disabled">
-                    <a class="page-link" href="#">Newer &rarr;</a>
+                <li class="page-item">
+                    <form asp-controller="Home" asp-action="Index" method="get">
+                        <input type="hidden" value="@newer" name="page" />
+                        @if (Model.TotalPosts > newer * 5)
+                        {
+                            <button type="submit" class="page-link btn text-white">Newer &rarr;</button>
+                        }
+                        else
+                        {
+                            <button type="submit" class="page-link btn text-white" disabled>Newer &rarr;</button>
+                        }
+                    </form>
                 </li>
-            </ul>*@
+            </ul>
         </div>
 
         <!-- Sidebar Widgets Column -->
