--- a/MawBlog/Views/Shared/_Layout.cshtml
+++ b/MawBlog/Views/Shared/_Layout.cshtml
@@ -1,6 +1,7 @@
 ﻿<!DOCTYPE html>
-<html lang="en">
+<html lang="en" prefix="og: http://ogp.me/ns#">
 <head>
+    <meta property='og:image' content='//i.imgur.com/AeruNiR.jpg' />  
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>@ViewData["Title"] - MawBlog</title>
